# medp

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md
cmake/: armv7em-gnu-toolchain.cmake  armv7em-llvm-toolchain.cmake
src/: CMakeLists.txt
src/app/: CMakeLists.txt  debug.h  main.c
src/core/: CMakeLists.txt  cmsis_clang.h  cmsis_gcc.h  core_cm7.h  startup_stm32f769.c  stm32f769.ld  stm32f769xx.h  stm32f7xx.h  syscalls.c  vectors.h
src/driver/: CMakeLists.txt  flash.c  flash.h  fpu.c  fpu.h  init.c  init.h  pwr.c  pwr.h  rcc.c  rcc.h  spi.c  spi.h
